--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,50 @@
 # Configurations
-title:            Jekyll Gitbook
-longtitle:        Jekyll Gitbook
-author:           HE Tao
-email:            sighingnow@gmail.com
+title: Custom Firmware Tutorial
+longtitle: Switch OpenCourse Custom Firmware Tutorial GitBook
+author: jshsakura
+email: jshsakura@gmail.com
+exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 description: >
   Build Jekyll site with the GitBook style.
 
-version:          1.0
-gitbook_version:  3.2.3
+version: 1.0
+gitbook_version: 3.2.3
 
-url:              'https://sighingnow.github.io'
-baseurl:          '/jekyll-gitbook'
-rss:              RSS
+url: "https://jshsakura.github.io"
+baseurl: "/gitbook"
+rss: RSS
 
 toc:
   enabled: true
   h_min: 1
   h_max: 3
 
+comments:
+  gitalk:
+    clientID: af872a61510f2d69d14e
+    clientSecret: 4153601d63c75fc018641d1cab52492f9dc71fd3
+    repo: gitbook_comment
+    owner: jshsakura
+    admin: jshsakura
+
 # markdown render engine.
-markdown:         kramdown
+markdown: kramdown
 kramdown:
-  auto_ids:               true
-  input:                  GFM
-  math_engine:            mathjax
-  smart_quotes:           lsquo,rsquo,ldquo,rdquo
-  toc_levels:             1..6
-  syntax_highlighter:     rouge
+  auto_ids: true
+  input: GFM
+  math_engine: mathjax
+  smart_quotes: lsquo,rsquo,ldquo,rdquo
+  toc_levels: 1..6
+  syntax_highlighter: rouge
   syntax_highlighter_opts:
-    guess_lang:           true
+    guess_lang: true
 
 syntax_highlighter_style: colorful
 
-markdown_ext:     markdown,mkdown,mkdn,mkd,md
+markdown_ext: markdown,mkdown,mkdn,mkd,md
 
 # Permalinks
-permalink:        /:categories/:year-:month-:day-:title:output_ext
+permalink: /:categories/:year-:month-:day-:title:output_ext
 
 exclude:
   - _drafts
@@ -45,9 +54,9 @@ collections:
     output: true
     permalink: /:collection/:path/
 
-destination:      ./_site
-incremental:      false
-regenerate:       true
+destination: ./_site
+incremental: false
+regenerate: true
 
 plugins:
   - jekyll-feed
