--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ email: jshsakura@gmail.com
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 description: >
   Build Jekyll site with the GitBook style.
+user_verification: Hcve4yZ6k9qHCwxK_9bF2kYULoYHEGtf9f19mPXoSvQ
+user_adsense_client: ca-pub-3553523371446563
 
 version: 1.0
 gitbook_version: 3.2.3
