--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ gitbook_version: 3.2.3
 url: "https://jshsakura.github.io"
 baseurl: "/gitbook"
 rss: RSS
-
+  
 toc:
   enabled: true
   h_min: 1
@@ -63,3 +63,11 @@ regenerate: true
 plugins:
   - jekyll-feed
   - jemoji
+  - jekyll-sitemap
+
+defaults:
+  -
+    scope:
+      path: "assets/**/*.*"
+    values:
+      sitemap: false
